# credit-risk-tool

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  pyproject.toml
model/saved_models/: xgboost_model_output_v1.pkl
notebooks/: 01_EDA.ipynb  02_domain_analysis.ipynb  03_miscallaneous_cleaning.ipynb  04_feature_engineering.ipynb  05_feature_model_selection.ipynb  05_model_selection.ipynb  06_model_finetuning.ipynb  07_final_model_pipeline.ipynb  07_tuning.ipynb  EDA.ipynb  correlation_analysis.ipynb  domain_analysis.ipynb  experiments.ipynb  feature_engineering.ipynb  model_training.ipynb  pipeline.ipynb
notebooks/analysis/: EDA.ipynb
src/: __init__.py  pipeline.py  predict.py  train.py  utils.py
src/api/: api.py  config.py  main.py
src/api/schemas/: __init__.py  health.py  predict.py
src/config/: config.yml  core.py
src/data/: cleaning.py  feature_engineering.py  loading.py  main.py  preprocessing.py  splitting.py
src/processing/: features.py  loading.py  validation.py
tests/: conftest.py  test_features.py  test_prediction.py
