[project]
name = "credit-risk"
version = "0.1.0"
description = "predicting loan defaults using lending club data"
authors = [
    {name = "heardchef33",email = "prachathornth@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pandas (<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "feature-engine (>=1.9.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.10.0,<4.0.0)",
    "graphene (>=3.0.0)",     
    "graphql-core (>=3.1.0)",  
    "graphql-relay (>=3.1.0)",  
    "catboost (>=1.2.10,<2.0.0)",  
    "lightgbm (>=4.6.0,<5.0.0)",  
    "xgboost (>=3.2.0,<4.0.0)",  
    "optuna (>=4.7.0,<5.0.0)",  
    "nbformat (>=5.10.4,<6.0.0)",  
    "shap (>=0.51.0,<0.52.0)",  
    "strictyaml (>=1.7.3,<2.0.0)",  
    "fastapi (>=0.136.0,<0.137.0)",  
    "loguru (>=0.7.3,<0.8.0)",  
    "pydantic-settings (>=2.13.1,<3.0.0)",  
    "streamlit (>=1.56.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
